--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@babel/core": "^7.13.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/core": "^7.13.0",
+    "history": "^5.3.0",
     "jest-watch-typeahead": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^3.0.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
@@ -51,6 +53,8 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/webpack-env": "^1.18.3",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@webpack-cli/serve": "^2.0.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
