--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --env=jest-environment-jsdom-sixteen",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
@@ -15,13 +15,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "history": "^5.3.0",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^3.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,12 +52,17 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@faker-js/faker": "^8.2.0",
+    "@mui/icons-material": "^5.14.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/react-redux": "^7.1.28",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/webpack-env": "^1.18.3",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -62,6 +73,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom": "24.9.0",
+    "jest-fetch-mock": "^3.0.3",
+    "msw": "^2.0.1",
     "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.3",
     "ts-jest": "24.3.0",
