--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "eslint": "^8.52.0",
     "history": "^5.3.0",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jest-watch-typeahead": "^2.2.2",
